modified:   src/sha256/sha256_c/Makefile 	modified:   src/sha256/sha256_c/main.c

--- a/src/sha256/sha256_c/Makefile
+++ b/src/sha256/sha256_c/Makefile
@@ -1,2 +1,3 @@
 sha256: main.c
-	gcc main.c -o main -O3
+	gcc main.c -o main -O3 -march=native -mtune=native
+	gcc -S main.c -o main.s -O3 -march=native -mtune=native
