Changes to be committed: modified:   .gitignore modified:   src/sha256/sha256_c/Makefile

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # Currently supports C, C++, Rust, and Python files
 *.s
 
+.vscode/
+
 # Sources: 
 # https://github.com/github/gitignore/blob/main/C.gitignore
 # https://github.com/github/gitignore/blob/main/C%2B%2B.gitignore
