--- a/src/sha256/sha256_c/Makefile
+++ b/src/sha256/sha256_c/Makefile
@@ -1,3 +1,4 @@
 sha256: main.c
-	gcc main.c -o main -O3 -march=native -mtune=native
+	gcc main.c -o main_gcc -O3 -march=native -mtune=native
 	gcc -S main.c -o main.s -O3 -march=native -mtune=native
+	clang main.c -o main_cl.exe -O3 -march=native -mtune=native
