--- a/src/fft/fft_rs/Cargo.toml
+++ b/src/fft/fft_rs/Cargo.toml
@@ -9,3 +9,8 @@ edition = "2021"
 rand = "0.8.5"
 num_cpus = "1.16.0"
 num = "0.4.1"
+
+[profile.release]
+opt-level = 3
+lto = "fat"
+codegen-units = 1
